A aplicação no momento conta com os cadastro de Funcionario e Produtos já funcionando e e parte de Cliente em desenvolvimento, mas sem erros. 07/11/2016

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">EsteticApp</string>
     <string name="title_activity_maps">Map</string>
+    <string name="title_funcionario">Funcionario</string>
+    <string name="title_produto">Produto</string>
 
     <string name="login_button">Entrar</string>
     <string name="login_user">E-mail</string>
